# flowgen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.MD  config.example.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  flowgen-release.yml  helm-release.yml  lint.yml  release.yml  security.yml  test.yml
components/core/src/: client.rs  lib.rs  service.rs
components/file/src/: subscriber.rs
components/google/: Cargo.toml  build.rs
components/google/src/: google.api.rs  google.iam.v1.rs  google.storage.v2.rs  lib.rs
components/google/src/storage/: context.rs  subscriber.rs
components/salesforce/: Cargo.toml  build.rs
components/salesforce/src/: auth.rs  config.rs  eventbus.v1.rs  lib.rs  pubsub.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  input.rs  lib.rs  message.rs  messages.rs  serde.rs  service.rs
crates/deltalake/src/: client.rs  config.rs  writer.rs
crates/file/: Cargo.toml
crates/file/src/: config.rs  reader.rs  subscriber.rs
crates/http/: Cargo.toml
crates/http/src/: config.rs  (+1 more)
crates/salesforce/: Cargo.toml
deploy/: config.yaml
deploy/flows/: account_sf_query_job_creator.json  account_sf_query_job_creator.yaml
docker/: Dockerfile
examples/: Cargo.toml  csv_deltalake_writer.json  salesforce_pubsub_nats.json
examples/salesforce/: salesforce_pubsub_account_subscriber.json  salesforce_pubsub_account_writer.json  salesforce_pubsub_writer.yaml
flowgen/: Cargo.toml  build.rs
flowgen-worker/salesforce/: Cargo.toml
flowgen/src/: app.rs  config.rs  flow.rs  lib.rs  main.rs  service.rs
scripts/: build.sh
(+76 files in other folders)
