[workspace]
members = ["flowgen", "bin/event-relay"]
resolver = "2"
exclude = [".cargo"]

[workspace.dependencies]
flowgen_salesforce = { path = "components/salesforce" }
flowgen_google = { path = "components/google" }
flowgen_nats = { path = "components/nats" }
flowgen_core = { path = "components/core" }
flowgen_file = { path = "components/file" }

[workspace.package]
version = "0.0.1"
authors = ["CONNVE"]
license = "MIT"
edition = "2021"
publish = false
