[package]
name = "flowgen_google"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_google"
path = "src/lib.rs"

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
tonic = "0.10.2"
bytes = "1.5.0"
tokio = "1.35.1"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"

[build-dependencies]
tonic-build = "0.10.2"
